...
            "state" : "translated",
            "value" : "アダプティブ"
          }
        }
      }
    },
    "Add" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "追加"
          }
...
            "state" : "translated",
            "value" : "プレイリストに追加"
          }
        }
      }
    },
    "Add Tracks" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "曲を追加"
          }
...
            "state" : "translated",
            "value" : "すべて（AND）"
          }
        }
      }
    },
    "All Songs" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "すべての曲"
          }
...
            "state" : "translated",
            "value" : "メタデータを編集できるか確認中…"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "閉じる"
          }
...
            "state" : "translated",
            "value" : "保存に失敗しました: %@"
          }
        }
      }
    },
    "Create AAC Version" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "AACバージョンを作成"
          }
...
            "state" : "translated",
            "value" : "長さ"
          }
        }
      }
    },
    "Edit Columns" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "カラムを編集"
          }
...
            "state" : "translated",
            "value" : "この一覧に入力済みの名前は置き換えられます。"
          }
        }
      }
    },
    "Export" : {
      "comment" : "A button that exports the list of missing titles.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "ファイルサイズ"
          }
        }
      }
    },
    "Fill All Names with Timestamps" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "すべての名前をタイムスタンプで埋める"
          }
...
            "state" : "translated",
            "value" : "すべての名前をタイムスタンプで埋めますか？"
          }
        }
      }
    },
    "Fill with Timestamps" : {
      "comment" : "A button that fills in all missing media titles with timestamps.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "タイトル未検出メディアの命名"
          }
        }
      }
    },
    "New Playlist" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "新規プレイリスト"
          }
...
            "state" : "translated",
            "value" : "歌詞情報がありません"
          }
        }
      }
    },
    "No Media" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "メディアがありません"
          }
...
            "state" : "translated",
            "value" : "オフ"
          }
        }
      }
    },
    "OK" : {
      "comment" : "A button that dismisses the alert.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "パネルの内容"
          }
        }
      }
    },
    "Panel Layout" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "パネルレイアウト"
          }
...
            "state" : "translated",
            "value" : "プレイリストが空です"
          }
        }
      }
    },
    "Playlists" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "プレイリスト"
          }
...
            "state" : "translated",
            "value" : "削除"
          }
        }
      }
    },
    "Remove from Playlist" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "プレイリストから削除"
          }
        }
      }
    },
    "Rename" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "名前を変更"
          }
...
            "state" : "translated",
            "value" : "再生の調整"
          }
        }
      }
    },
    "Export…" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Export…"
...
